--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
+author: "Roger K. Winters"
 output: 
   html_document:
     keep_md: true
@@ -8,11 +9,23 @@ output:
 
 ## Loading and preprocessing the data
 
-
+```{r}
+activity_data <- read.csv("activity.csv")
+```
 
 ## What is mean total number of steps taken per day?
 
+```{r}
+steps_per_day <- aggregate(steps ~ date, activity_data, sum)
 
+hist(steps_per_day$steps, breaks = 8, 
+     main = paste("Histogram of Total Number of Steps Taken Each Day"), 
+     xlab = "Number of Steps", 
+     ylab = "Frequency")
+
+mean(steps_per_day$steps)
+median(steps_per_day$steps)
+```
 
 ## What is the average daily activity pattern?
 
