--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -19,7 +19,7 @@ activity_data <- read.csv("activity.csv")
 steps_per_day <- aggregate(steps ~ date, activity_data, sum)
 
 hist(steps_per_day$steps, breaks = 8, 
-     main = paste("Histogram of Total Number of Steps Taken Each Day"), 
+     main = paste("Total Number of Steps Taken Each Day"), 
      xlab = "Number of Steps", 
      ylab = "Frequency")
 
@@ -30,17 +30,32 @@ median(steps_per_day$steps)
 ## What is the average daily activity pattern?
 
 ```{r}
-avg_daily_pattern <- tapply(activity_data$steps, activity_data$interval, mean, na.rm = TRUE)
+avg_daily_pattern <- aggregate(steps ~ interval, activity_data, mean)
 
-plot(row.names(avg_daily_pattern), avg_daily_pattern, type = "l", xlab = "5-min Intervals", 
+plot(avg_daily_pattern$interval, avg_daily_pattern$steps, type = "l", xlab = "5-min Intervals", 
         ylab = "Average Number of Steps Taken Across All Days", main = "Average Daily Activity Pattern")
 
-largest_interval <- which.max(avg_daily_pattern)
-names(largest_interval)
+avg_daily_pattern[which.max(avg_daily_pattern$steps),]
 ```
 
 ## Imputing missing values
 
+```{r}
+library(Hmisc)
 
+sum(is.na(activity_data$steps))
+
+activity_data_imputed <- activity_data
+activity_data_imputed$steps <- as.integer(with(activity_data_imputed, round(impute(steps, mean))))
+steps_per_day_imputed <- aggregate(steps ~ date, activity_data_imputed, sum)
+mean(steps_per_day_imputed$steps)
+median(steps_per_day_imputed$steps)
+
+hist(steps_per_day_imputed$steps, breaks = 8, 
+     main = paste("Total Number of Steps Taken Each Day (Imputed)"), 
+     xlab = "Number of Steps", 
+     ylab = "Frequency")
+
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
