Some more minor cleanup

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -73,7 +73,7 @@ I decided the use the mean of all steps in the activity data to fill in the miss
 
 ```{r}
 activity_data_imputed <- activity_data
-activity_data_imputed$steps <- as.integer(with(activity_data, round(impute(steps, mean))))
+activity_data_imputed$steps <- as.integer(with(activity_data_imputed, round(impute(steps, mean))))
 steps_per_day_imputed <- aggregate(steps ~ date, activity_data_imputed, sum)
 ```
 
