More minor cleanup

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -73,7 +73,7 @@ I decided the use the mean of all steps in the activity data to fill in the miss
 
 ```{r}
 activity_data_imputed <- activity_data
-activity_data_imputed$steps <- as.integer(with(activity_data_imputed, round(impute(steps, mean))))
+activity_data_imputed$steps <- with(activity_data_imputed, impute(steps, mean))
 steps_per_day_imputed <- aggregate(steps ~ date, activity_data_imputed, sum)
 ```
 
@@ -84,7 +84,7 @@ mean(steps_per_day_imputed$steps)
 median(steps_per_day_imputed$steps)
 ```
 
-The average number of steps has declined slightly.
+The average number of steps hasn't really changed much.
 
 ```{r}
 hist(steps_per_day_imputed$steps, breaks = 8, col = "darkgreen",
